; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event_tagging.c_evtag_unmarshal_timeval.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/extr_event_tagging.c_evtag_unmarshal_timeval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evbuffer = type { i32 }
%struct.timeval = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @evtag_unmarshal_timeval(%struct.evbuffer* %0, i64 %1, %struct.timeval* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.evbuffer*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.timeval*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store %struct.evbuffer* %0, %struct.evbuffer** %5, align 8
  store i64 %1, i64* %6, align 8
  store %struct.timeval* %2, %struct.timeval** %7, align 8
  store i32 -1, i32* %13, align 4
  %14 = load %struct.evbuffer*, %struct.evbuffer** %5, align 8
  %15 = call i32 @evtag_unmarshal_header(%struct.evbuffer* %14, i64* %8)
  store i32 %15, i32* %10, align 4
  %16 = icmp eq i32 %15, -1
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %53

18:                                               ; preds = %3
  %19 = load i64, i64* %8, align 8
  %20 = load i64, i64* %6, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %18
  br label %48

23:                                               ; preds = %18
  %24 = load %struct.evbuffer*, %struct.evbuffer** %5, align 8
  %25 = call i32 @decode_int_internal(i64* %9, %struct.evbuffer* %24, i32 0)
  store i32 %25, i32* %11, align 4
  %26 = icmp eq i32 %25, -1
  br i1 %26, label %27, label %28

27:                                               ; preds = %23
  br label %48

28:                                               ; preds = %23
  %29 = load i64, i64* %9, align 8
  %30 = load %struct.timeval*, %struct.timeval** %7, align 8
  %31 = getelementptr inbounds %struct.timeval, %struct.timeval* %30, i32 0, i32 1
  store i64 %29, i64* %31, align 8
  %32 = load %struct.evbuffer*, %struct.evbuffer** %5, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @decode_int_internal(i64* %9, %struct.evbuffer* %32, i32 %33)
  store i32 %34, i32* %12, align 4
  %35 = icmp eq i32 %34, -1
  br i1 %35, label %36, label %37

36:                                               ; preds = %28
  br label %48

37:                                               ; preds = %28
  %38 = load i64, i64* %9, align 8
  %39 = load %struct.timeval*, %struct.timeval** %7, align 8
  %40 = getelementptr inbounds %struct.timeval, %struct.timeval* %39, i32 0, i32 0
  store i64 %38, i64* %40, align 8
  %41 = load i32, i32* %11, align 4
  %42 = load i32, i32* %12, align 4
  %43 = add nsw i32 %41, %42
  %44 = load i32, i32* %10, align 4
  %45 = icmp sgt i32 %43, %44
  br i1 %45, label %46, label %47

46:                                               ; preds = %37
  br label %48

47:                                               ; preds = %37
  store i32 0, i32* %13, align 4
  br label %48

48:                                               ; preds = %47, %46, %36, %27, %22
  %49 = load %struct.evbuffer*, %struct.evbuffer** %5, align 8
  %50 = load i32, i32* %10, align 4
  %51 = call i32 @evbuffer_drain(%struct.evbuffer* %49, i32 %50)
  %52 = load i32, i32* %13, align 4
  store i32 %52, i32* %4, align 4
  br label %53

53:                                               ; preds = %48, %17
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i32 @evtag_unmarshal_header(%struct.evbuffer*, i64*) #1

declare dso_local i32 @decode_int_internal(i64*, %struct.evbuffer*, i32) #1

declare dso_local i32 @evbuffer_drain(%struct.evbuffer*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
